--- a/index.html
+++ b/index.html
@@ -4,17 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link ref=""stylesheet href="style.css"> 
 </head>
-<style>
-    h1{
-        text-align:center;
-        color:blue;
-    }
 
-</style>
 <body>
     <h1>
         hello git
     </h1>
+    <script src="script.js"> </script>
+
 </body>
 </html>
