--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h1>
         hello git
     </h1>
+    <form>
+        <input type="email" placeholder="enter your email"/>
+        <input type="password" placeholder="enter your password" />
+        <input type="submit" value="login"/>
+    </form>
     <script src="script.js"> </script>
 
 </body>
